# PNIDGrab

./: Cargo.toml  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: gui.rs  id.rs  main.rs  platform.rs
src/platform/: linux.rs  macos.rs  windows.rs
