[package]
name = "pnidgrab"
version = "4.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
cfg-if = "1.0.4"
libc = "0.2.179"
reqwest = { version = "0.13.1", features = ["blocking"] }
roxmltree = "0.21.1"
gtk4 = "0.10.3"
libadwaita = "0.8.1"
gio = "0.21.5"
nix = { version = "0.30.1", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"
mach2 = "0.6.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
  "winnt",
  "processthreadsapi",
  "memoryapi",
  "psapi",
  "winerror",
  "tlhelp32",
  "handleapi",
  "errhandlingapi",
  "libloaderapi"
]
